Connexion automatique après inscription

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,11 @@ security:
                 default_target_path: home
             logout:
                 path:   app_logout
+            guard:
+                authenticators:
+                    - App\Security\TokenAuthenticator
+                    - App\Security\LoginFormAuthenticator
+                entry_point: App\Security\LoginFormAuthenticator
 
             # activate different ways to authenticate
 
@@ -34,5 +39,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/profile, roles: ROLE_USER }
