--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,4 +4,5 @@ twig:
     strict_variables: '%kernel.debug%'
     form_themes:
         - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+        - 'bootstrap_4_layout.html.twig'
 
