--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,4 +40,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/utilisateur, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
