--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,4 +42,5 @@ security:
          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/utilisateur, roles: ROLE_USER }
+         - { path: ^/souvenirs, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
